tests/sksl/errors/Ossfuzz44551.glsl
### Compilation failed:

error: 6: type mismatch: '+' cannot operate on 'int', '<INVALID>'
error: 8: expected ';', but found 'o'
2 errors
